--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-//hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="my-profile.css"/>
+</head>
+<body>
+    <img src = "img/luffypfp.png">
+    <script src="my-profile.js"></script>
+
+</body>
+</html>
