--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="my-profile.css"/>
 </head>
 <body>
-    <img src = "img/luffypfp.png">
-    <script src="my-profile.js"></script>
 
+    <script src="my-profile.js"></script>
+    <div id="image-container"></div>
 </body>
 </html>
